full-moon/tests/cases/fail/parser/index-4/error_display.snap
---
source: full-moon/tests/fail_cases.rs
assertion_line: 56
expression: "String::from_utf8(output.into_inner()).unwrap()"
input_file: full-moon/tests/cases/fail/parser/index-4
---
error[ast]: expected expression after `[`
  ┌─ source.lua:1:12
  │
1 │ local y = x[end]
  │            ^

error[ast]: unexpected token, this needs to be a statement
  ┌─ source.lua:1:13
  │
1 │ local y = x[end]
  │             ^^^


